[project]
name = "empty-latent-image-plus"
description = "A compact ComfyUI Empty Latent Image replacement that also outputs WIDTH and HEIGHT values."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ukr8b3g-cmyk/Empty-Latent-Image-Plus"
Documentation = "https://github.com/ukr8b3g-cmyk/Empty-Latent-Image-Plus#readme"
"Bug Tracker" = "https://github.com/ukr8b3g-cmyk/Empty-Latent-Image-Plus/issues"

[tool.comfy]
PublisherId = "ukr8b3g-cmyk"
DisplayName = "Empty Latent Image Plus"
